# declination

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  manifest.xml  package.xml  setup.py
launch/: declination.launch
nodes/: compute  compute.py
src/: apply_to_imu.cpp
src/declination/: compute.py
src/geomag/: README  __init__.py  try.py
